--- a/src/app/post/postviewer.scss
+++ b/src/app/post/postviewer.scss
@@ -1,6 +1,6 @@
 .postviewer {
     &__container {
-        padding: 2rem 2rem 20rem 2rem;
+        padding: 1rem 1rem 20rem 1rem;
         transition: .3s;
         min-height: 100vh;
         // background-color: #d9c6ba;
@@ -140,7 +140,7 @@
 @media only screen and (max-width: 640px) {
     .postviewer {
         &__container {
-            padding: 2rem 0 20rem 0;
+            padding: 0 0 20rem 0;
             transition: .3s;
             background-color: white;
         }
