--- a/src/app/store/store.scss
+++ b/src/app/store/store.scss
@@ -39,17 +39,17 @@
 
     &__welcome {
         &-title {
-            font-size: 4rem;
+            font-size: 3rem;
             margin: 0 0 2rem;
             text-align: center;
             opacity: 0;
             animation: fade-in-down 1s forwards;
             animation-delay: 1.5s;
-            font-family: 'Madelyn', sans-serif;
+            font-family: var(--font-madelyn), sans-serif;
         }
 
         &-text {
-            font-size: 1.2rem;
+            font-size: 1rem;
             text-align: center;
             margin: 0;
             animation: fade-in 1s forwards;
