--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,7 +77,7 @@ a:hover {
 @font-face {
   font-family: 'Madelyn';
   src:
-    url('/fonts/Madelyn.woff2') format('woff2');
+    url('/public/fonts/Madelyn.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
