--- a/src/app/post/postviewer.scss
+++ b/src/app/post/postviewer.scss
@@ -75,7 +75,7 @@
             // box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175);
             border-radius: 1rem;
             width: 50vw;
-            margin: 0 0 4rem 0;
+            margin: 4rem 0;
         }
 
         &-text {
