--- a/src/components/ProductCard/productcard.scss
+++ b/src/components/ProductCard/productcard.scss
@@ -38,6 +38,7 @@
             width: 100%;
             min-width: 17rem;
             overflow: hidden;
+            position: relative;
         }
 
         &-frame {
@@ -46,5 +47,19 @@
             border-top: 1px solid #d3d3d369;
             border-left: 1px solid #d3d3d369;
         }
+    }
+
+    &__loader {
+        position: absolute;
+        z-index: 2;
+        opacity: .7;
+        background-color: #fff;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
