--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -5,13 +5,13 @@
 
     &__row-container {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
+        flex-direction: column;
+        width: 60vw;
+        margin: auto;
     }
 
     &__info {
-        width: 40%;
+        width: 30vw;
     }
 
     &__title {}
@@ -23,13 +23,12 @@
     &__box {
         display: flex;
         flex-direction: column;
-        width: 40vw;
-        box-shadow: 3px 3px 15px lightgray;
-        border-radius: .5vw;
-        padding: 1vw;
-        margin-top: 2vw;
-        gap: 1vw;
-        background-color: #FFF9F5;
+        width: 30vw;
+        box-shadow: 2px 2px 10px lightgray;
+        border-radius: .5rem;
+        padding: 1rem;
+        margin-top: 1rem;
+        gap: 1rem;
         height: fit-content;
     }
 
@@ -84,7 +83,8 @@
         &__row-container {
             display: flex;
             flex-direction: column;
-            // width: 80vw;
+            margin: 1rem;
+            width: fit-content;
         }
 
         &__info {
@@ -98,12 +98,12 @@
             flex-direction: column;
             right: unset;
             width: 90%;
-            gap: 5vw;
-            padding: 5vw;
-            margin-top: 10vw;
-            box-shadow: 3px 3px 15px lightgray;
+            gap: 1rem;
+            padding: 1rem;
+            margin-top: 2rem;
+            box-shadow: 2px 2px 10px lightgray;
             background-color: #fff;
-            border-radius: 1.5vw;
+            border-radius: .5rem;
             top: unset;
         }
 
