--- a/src/app/login/login.scss
+++ b/src/app/login/login.scss
@@ -16,6 +16,7 @@
         padding: 1vw;
         box-shadow: 3px 3px 15px lightgray;
         border-radius: .5vw;
+        animation: fade-in 1s forwards;
 
         &button {
             justify-self: center;
