post-images-transitions

--- a/src/app/subscribe/subscribe.scss
+++ b/src/app/subscribe/subscribe.scss
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: center;
         gap: 2rem;
+        animation: fade-in 1s ease-in forwards;
     }
 
     &__box {
