--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -436,6 +436,7 @@
             margin: 0 5vw;
             width: fit-content;
             color: #fff;
+            animation: none;
 
             &-svg {
                 height: 6vw;
