--- a/src/app/404/pageNotFound.scss
+++ b/src/app/404/pageNotFound.scss
@@ -6,10 +6,10 @@
         justify-content: center;
         align-items: center;
         place-content: center;
-        height: 90vh;
         gap: 2rem;
         width: 60vw;
-        margin: 0 auto;
+        margin: 0 auto 20rem;
+        padding: 5rem 1rem;
     }
 
     &__404 {
@@ -17,6 +17,7 @@
         margin: 0;
         font-weight: normal;
     }
+
     &__header {
         font-size: 3rem;
         margin: 0;
@@ -36,31 +37,40 @@
     }
 }
 
-
-@media screen and (max-width: 762px) {
-    .notfound {
-        &__container {
-            margin: 4rem 0;
-            flex-direction: column;
-        }
-    
-        &__image {
-            width: 80vw;
-            height: auto;
-        }
-    }
-}
-
 @media screen and (max-width: 640px) {
     .notfound {
         &__container {
+            position: relative;
+            display: flex;
             flex-direction: column;
-            margin: 4rem 2rem;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 2rem;
+            width: 90vw;
+            height: 90vh;
+            margin: 0;
+            padding: 1rem 1rem 15rem 1rem;
+            position: relative;
         }
-    
+
+        &__col {
+            display: flex;
+            flex-direction: column;
+
+            &>button {
+                align-self: center;
+            }
+        }
+
         &__image {
-            width: 80vw;
-            height: auto;
+            position: absolute;
+            margin: auto auto;
+            height: 90vh;
+            border-radius: 0%;
+            z-index: -1;
+            opacity: .4;
+            top: -1px;
+            filter: blur(3px);
         }
     }
 }
