--- a/src/components/PostCard/postcard.scss
+++ b/src/components/PostCard/postcard.scss
@@ -115,23 +115,24 @@
 @media only screen and (max-width: 640px) {
     .postcard {
         &__container {
-            height: 50vh;
+            height: 100vw;
             width: 70vw;
             margin-bottom: 1rem;
             animation: fade-in-card 1.5s ease-in;
+            
 
             &:hover {
-                filter: none !important;
+                filter: none ;
             }
 
             &:hover .postcard__image {
-                transform: none !important;
-                filter: none !important;
+                transform: none;
+                filter: none;
             }
 
             &:hover .postcard__image-overlap {
-                opacity: 0 !important;
-                transform: translateY(100%) !important;
+                opacity: 0;
+                transform: translateY(100%);
             }
         }
 
