isr-blog-saerch404-nbsp

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -323,6 +323,10 @@
         margin: 0 1vw;
         animation: move-y-down 1s ease-in;
 
+        &-loader {
+            position: absolute;
+        }
+
         &-svg {
             height: 1rem;
             margin: .5rem;
