--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -9,7 +9,7 @@
         position: fixed;
         top: 0;
         width: 100%;
-        // background-color: #0000005a;
+        background: #00000099;
         z-index: 3;
         transition: .5s;
     }
@@ -70,10 +70,17 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 2rem;
+            margin-top: 1.5rem;
+
+            &-row {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: .5rem;
+            }
 
             &-text {
-                margin: 0 0 1rem 0;
+                margin: .75rem 0;
                 font-weight: normal;
                 text-align: left;
                 opacity: 0;
@@ -88,8 +95,11 @@
             width: 100%;
             text-align: center;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             position: relative;
+            align-items: center;
+            justify-content: center;
+            gap: .5rem;
 
             &-text {
                 font-size: 1rem;
@@ -183,6 +193,7 @@
         align-items: center;
         transition: 0.3s;
         height: 100%;
+        gap: .5rem;
 
         &:hover>.header__item-text {
             // background-color: #ece7e6;
@@ -230,6 +241,7 @@
             // box-shadow: 7px 11px 16px -3px #9999995e;
             pointer-events: none;
             margin-top: 4rem;
+            background: #00000099;
 
             &-row {
                 display: flex;
