--- a/src/app/post/postviewer.scss
+++ b/src/app/post/postviewer.scss
@@ -14,7 +14,7 @@
         margin: 8rem 0;
 
         &>h2 {
-            font-size: 4rem;
+            font-size: 3rem;
             font-weight: normal;
             margin-bottom: 0;
         }
@@ -39,9 +39,9 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        flex-wrap: wrap;
+        gap: .5rem;
         animation: fade-in 1s ease-in;
-        max-height: fit-content;
-        height: 2rem;
 
         &-link {
             font-size: .9rem;
@@ -153,11 +153,7 @@
         }
 
         &__routes {
-            margin: 1.5rem 0 .5rem .5rem;
-            justify-content: space-evenly;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            margin: .5rem;
 
             &-link {
                 font-size: .75rem;
