fix-images-not-showing-edit-store

--- a/src/app/contact/contact.scss
+++ b/src/app/contact/contact.scss
@@ -121,7 +121,7 @@
                 padding: .3vw;
                 font-size: 1vw;
                 border-radius: .3vw;
-                font-family: 'Lora', serif;
+                font-family: var(--font-lora), serif;
                 resize: none;
             }
         }
