--- a/src/app/about/about.scss
+++ b/src/app/about/about.scss
@@ -21,7 +21,7 @@
     }
 
     &__title {
-        font-family: 'Lora', serif;
+        font-family: var(--font-lora), serif;
         font-size: 1.5rem;
     }
 
@@ -29,7 +29,7 @@
         // width: 65%;
         font-size: 1rem;
         text-align: justify;
-        font-family: 'Lora', serif;
+        font-family: var(--font-lora), serif;
         // margin: 0;
     }
 
