--- a/src/app/bespoken/bespoken.scss
+++ b/src/app/bespoken/bespoken.scss
@@ -5,7 +5,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // font-family: 'Lora', serif;
+        // font-family: var(--font-lora), serif;
     }
 
     &__logo {
@@ -29,7 +29,7 @@
     }
 
     &__text {
-        // font-family: 'Lora', serif;
+        // font-family: var(--font-lora), serif;
         font-size: 1rem;
         text-align: justify;
         // max-width: 60vw;
