--- a/src/app/post/postviewer.scss
+++ b/src/app/post/postviewer.scss
@@ -21,7 +21,7 @@
 
         &>h3 {
             font-weight: normal;
-            font-size: 'Lora', serif;
+            font-size: --font-lora;
         }
 
         &-row {
