--- a/src/app/store/product/product.scss
+++ b/src/app/store/product/product.scss
@@ -79,12 +79,50 @@
                 height: 70vh;
                 width: auto;
                 max-width: 90vw;
+                transition: .2s;
+                opacity: 0;
+                animation: fade-in .2s ease-in forwards;
 
                 &-content {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
+                    position: relative;
+                }
+
+                &-arrow-left {
+                    position: absolute;
+                    left: 0;
+                    color: #c0c0c0;
+                    font-size: 2rem;
+                    cursor: pointer;
+                    transition: .2s;
+                    padding: 1rem;
+                    height: 100%;
+                    place-content: center;
+                    z-index: 2;
+
+                    &:hover {
+                        color: #5D8C8C;
+                    }
+                }
+
+                &-arrow-right {
+                    position: absolute;
+                    right: 0;
+                    color: #c0c0c0;
+                    font-size: 2rem;
+                    cursor: pointer;
+                    transition: .2s;
+                    padding: 1rem;
+                    height: 100%;
+                    place-content: center;
+                    z-index: 2;
+
+                    &:hover {
+                        color: #5D8C8C;
+                    }
                 }
             }
 
