fix-width-store-product

--- a/src/app/store/product/product.scss
+++ b/src/app/store/product/product.scss
@@ -173,8 +173,8 @@
             margin: 5rem 0 1rem;
 
             &-image {
-                max-width: 90vw;
-                max-height: 75vh;
+                width: 90vw;
+                height: auto;
             }
         }
     }
