fix-width-store-product

--- a/src/app/store/product/product.scss
+++ b/src/app/store/product/product.scss
@@ -175,6 +175,7 @@
             &-image {
                 width: 90vw;
                 height: auto;
+                max-height: unset;
             }
         }
     }
