--- a/src/styles/scss/_animations.scss
+++ b/src/styles/scss/_animations.scss
@@ -234,9 +234,9 @@
 }
 
 .fade-in {
-    animation: fade-in .05s ease-in forwards;
+    animation: fade-in .0s forwards;
 }
 
 .fade-out {
-    animation: fade-out .05s ease-in forwards;
+    animation: fade-out 0s forwards;
 }
