--- a/src/app/store/product/product.scss
+++ b/src/app/store/product/product.scss
@@ -11,7 +11,7 @@
         align-items: center;
         min-height: 120vh;
         padding-bottom: 20rem;
-        margin: 4rem;
+        margin: 1rem 4rem 4rem 4rem;
         position: relative;
     }
 
@@ -21,6 +21,11 @@
         gap: 5rem;
         justify-content: center;
         width: 100%;
+        margin-top: 1rem;
+    }
+
+    &__routes {
+        margin: 0 0 1rem 0;
     }
 
     &__image {
@@ -57,7 +62,12 @@
     &__description {
         max-height: 40vh;
         overflow-y: scroll;
+    }
 
+    &__oos {
+        font-size: 1.5rem;
+        margin-top: 0;
+        opacity: .4;
     }
 
     &__gallery {
@@ -79,9 +89,9 @@
                 height: 85vh;
                 width: auto;
                 max-width: 90vw;
-                transition: .2s;
+                transition: 0s;
                 opacity: 0;
-                animation: fade-in .2s ease-in forwards;
+                animation: fade-in 0s ease-in forwards;
 
                 &-content {
                     display: flex;
@@ -145,7 +155,7 @@
         &__row {
             flex-direction: column;
             width: 90vw;
-            margin: auto;
+            margin: 1rem auto auto;
             gap: 2rem;
         }
 
