--- a/src/app/store/store.scss
+++ b/src/app/store/store.scss
@@ -98,9 +98,10 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        margin: 2rem 2rem 10rem 2rem;
+        margin: auto auto 10rem auto;
         gap: 3rem;
         height: 90%;
+        width: 75vw;
     }
 
     &__loader {
@@ -135,6 +136,10 @@
             margin: .5rem;
             padding-right: 1rem;
             font-size: 1rem;
+        }
+
+        &__list {
+            width: 90vw;
         }
     }
 }
