--- a/src/components/ProductCard/productcard.scss
+++ b/src/components/ProductCard/productcard.scss
@@ -2,8 +2,8 @@
     &__container {
         display: flex;
         flex-direction: column;
-        height: 20rem;
-        width: 17rem;
+        height: 24rem;
+        width: 20rem;
         align-items: center;
         gap: 1rem;
         cursor: pointer;
@@ -22,13 +22,14 @@
         &--oos {
             display: flex;
             flex-direction: column;
-            height: 20rem;
-            width: 17rem;
+            height: 24rem;
+            width: 20rem;
             align-items: center;
             gap: 1rem;
             opacity: 0;
             animation: fade-in-down .5s ease-in forwards;
             position: relative;
+            cursor: pointer;
 
             &:hover .productcard__image {
                 filter: grayscale(1) brightness(0.5);
@@ -90,9 +91,9 @@
         transition: 1s;
 
         &-wrapper {
-            height: 15rem;
+            height: 18rem;
             width: 100%;
-            min-width: 17rem;
+            min-width: 20rem;
             overflow: hidden;
             position: relative;
         }
@@ -104,8 +105,8 @@
             font-family: var(--font-madelyn), sans-serif;
             font-size: 4rem;
             top: 0;
-            height: 15rem;
-            width: 17rem;
+            height: 18rem;
+            width: 20rem;
             text-align: center;
             place-content: center;
             color: #fff;
