--- a/src/app/store/edit/editstore.scss
+++ b/src/app/store/edit/editstore.scss
@@ -3,6 +3,7 @@
         margin: 2rem;
         display: flex;
         flex-direction: column;
+        padding-bottom: 25vh;
     }
 
     &__title {}
