--- a/src/styles/scss/_pages.scss
+++ b/src/styles/scss/_pages.scss
@@ -13,6 +13,7 @@
 @import '../../app/store/store.scss';
 @import '../../app/store/edit/editstore.scss';
 @import '../../app/store/product/product.scss';
+@import '../../app/pdf/pdf.scss';
 @import '../../app/404/pageNotFound.scss';
 
 .page {
