--- a/src/app/pdf/pdf.scss
+++ b/src/app/pdf/pdf.scss
@@ -1,6 +1,6 @@
 .pdf {
   &__container {
-    padding: 1rem 0 20rem;
+    padding: 1rem 0 20rem 1rem;
     transition: .3s;
     height: 100vh;
     width: 100%;
@@ -80,13 +80,32 @@
         color: #5D8C8C;
       }
     }
-  }
-}
 
-@media only screen and (max-width: 640px) {
-  .pdf {
-    &__container {
-      height: 90vh;
+      &-language {
+        position: absolute;
+        right: .5rem;
+        top: .5rem;
+        color: #a4a4a4;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: .2s;
+        z-index: 2;
+        border: none;
+        outline: none;
+        background: transparent;
+
+        &:hover {
+          color: #5D8C8C;
+        }
+      }
     }
   }
-}
+
+  @media only screen and (max-width: 640px) {
+    .pdf {
+      &__container {
+        height: 90vh;
+        padding: 1rem 0 20rem 0;
+      }
+    }
+  }
