--- a/src/app/pdf/pdf.scss
+++ b/src/app/pdf/pdf.scss
@@ -81,31 +81,81 @@
       }
     }
 
-      &-language {
-        position: absolute;
-        right: .5rem;
-        top: .5rem;
-        color: #a4a4a4;
-        font-size: 1rem;
-        cursor: pointer;
-        transition: .2s;
-        z-index: 2;
-        border: none;
-        outline: none;
-        background: transparent;
+    &-language {
+      position: absolute;
+      right: .5rem;
+      top: .5rem;
+      color: #a4a4a4;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: .2s;
+      z-index: 2;
+      border: none;
+      outline: none;
+      background: transparent;
 
-        &:hover {
-          color: #5D8C8C;
-        }
+      &:hover {
+        color: #5D8C8C;
       }
     }
   }
+}
 
-  @media only screen and (max-width: 640px) {
-    .pdf {
-      &__container {
-        height: 90vh;
-        padding: 1rem 0 20rem 0;
+.pdfs {
+  &__container {}
+
+  &__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem;
+    border: 1px solid lightgray;
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: .2s;
+    position: relative;
+
+    &:hover {
+      opacity: .7;
+    }
+
+    &-btn {
+      position: absolute;
+      right: .5rem;
+      top: .5rem;
+      background-color: #5D8C8C;
+      border-radius: .5rem;
+      padding: .4rem;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: .2s;
+      z-index: 2;
+      border: none;
+      outline: none;
+      background: transparent;
+
+      &:hover {
+        color: #5D8C8C;
+        background-color: #fff;
       }
     }
   }
+}
+
+@media only screen and (max-width: 640px) {
+  .pdf {
+    &__container {
+      height: 90vh;
+      padding: 1rem 0 20rem 0;
+    }
+  }
+}
