--- a/src/app/pdf/pdf.scss
+++ b/src/app/pdf/pdf.scss
@@ -122,30 +122,49 @@
     border-radius: 1rem;
     cursor: pointer;
     transition: .2s;
+    width: 15vw;
+    gap: 1rem;
     position: relative;
 
     &:hover {
-      opacity: .7;
+      border: 1px solid gray;
+    }
+
+    &-image {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+      object-position: 0 0;
+      transition: 1s;
+      animation: fade-in 1s ease-in forwards;
+
+      &-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+      }
     }
 
     &-btn {
-      position: absolute;
-      right: .5rem;
-      top: .5rem;
-      background-color: #5D8C8C;
-      border-radius: .5rem;
-      padding: .4rem;
+      right: 1rem;
+      bottom: 1rem;
+      background: #5D8C8C;
+      color: #fff;
+      border: 1px solid transparent;
+      border-radius: 50%;
+      padding: 1rem;
       font-size: 1rem;
       cursor: pointer;
       transition: .2s;
       z-index: 2;
-      border: none;
       outline: none;
-      background: transparent;
+      position: absolute;
 
       &:hover {
         color: #5D8C8C;
-        background-color: #fff;
+        background: #fff;
+        border: 1px solid #5D8C8C;
       }
     }
   }
